@@ -19,36 +19,44 @@ AC_DEFUN([AX_OPENCL],
 
 	if test "${opencl_path}" != "none" ; then
 		AC_MSG_CHECKING([for OPENCL])
-		if test -d "${opencl_path}" ; then
-			AC_MSG_RESULT([found])
-			AX_FLAGS_SAVE()
-			AX_FIND_INSTALLATION([OPENCL], [${opencl_path}], [opencl])
-			AX_FLAGS_RESTORE()
-		else
-			AC_MSG_ERROR([The specified path for OpenCL does not exist])
-		fi
-		AC_MSG_CHECKING([for OPENCL header files])
-		if test -r ${OPENCL_INCLUDES}/CL/cl.h ; then
-			AC_MSG_RESULT([found])
-			AC_MSG_CHECKING([for OPENCL lib files])
-			if test -r ${OPENCL_LIBSDIR}/libOpenCL.so ; then
+		if test "${OperatingSystem}" != "darwin" ; then
+			if test -d "${opencl_path}" ; then
 				AC_MSG_RESULT([found])
-				enable_opencl="yes"
+				AX_FLAGS_SAVE()
+				AX_FIND_INSTALLATION([OPENCL], [${opencl_path}], [opencl])
+				AX_FLAGS_RESTORE()
 			else
-				AC_MSG_ERROR([Cannot find the necessary library files for OpenCL])
+				AC_MSG_ERROR([The specified path for OpenCL does not exist])
+			fi
+			AC_MSG_CHECKING([for OPENCL header files])
+			if test -r ${OPENCL_INCLUDES}/CL/cl.h ; then
+				AC_MSG_RESULT([found])
+				AC_MSG_CHECKING([for OPENCL lib files])
+				if test -r ${OPENCL_LIBSDIR}/libOpenCL.so ; then
+					AC_MSG_RESULT([found])
+					enable_opencl="yes"
+				else
+					AC_MSG_ERROR([Cannot find the necessary library files for OpenCL])
+				fi
+			else
+				AC_MSG_ERROR([Cannot find the necessary header files in the OpenCL path])
 			fi
 		else
-			AC_MSG_ERROR([Cannot find the necessary header files in the OpenCL path])
+			AC_MSG_CHECKING([available in APPLE systems])
 		fi
 		enable_opencl="yes"
 	fi
 
 	if test "${enable_opencl}" = "yes" ; then
 
-   AC_MSG_CHECKING([for OpenCL supported version])
+		AC_MSG_CHECKING([for OpenCL supported version])
 
 		AX_FLAGS_SAVE()
-		CFLAGS="${CFLAGS} -I${OPENCL_INCLUDES}"
+		if test "${OperatingSystem}" != "darwin" ; then
+			CFLAGS="${CFLAGS} -I${OPENCL_INCLUDES}"
+		else
+			CFLAGS="-framework OpenCL"
+		fi
 		AC_LANG_SAVE()
 		AC_LANG([C])
 		AC_TRY_COMPILE(
@@ -77,7 +85,7 @@ AC_DEFUN([AX_OPENCL],
 				[OpenCL_version="1.1"],
 				[OpenCL_version="no"]
 			)
-    fi
+		fi
 
 		if test "${OpenCL_version}" = "no" ; then
 			AC_TRY_COMPILE(
@@ -92,7 +100,7 @@ AC_DEFUN([AX_OPENCL],
 				[OpenCL_version="1.0"],
 				[OpenCL_version="no"]
 			)
-    fi
+		fi
 
 		if test "${OpenCL_version}" = "no" ; then
 			AC_MSG_ERROR([Unable to detect the version of the OpenCL system])
